opam-version: "2.0"
maintainer: "gmalecha@gmail.com"
homepage: "https://github.com/coq-ext-lib/coq-ext-lib"
dev-repo: "git+https://github.com/coq-ext-lib/coq-ext-lib.git"
bug-reports: "https://github.com/coq-ext-lib/coq-ext-lib/issues"
authors: ["Gregory Malecha"]
license: "BSD"
build: [
  [make "-j%{jobs}%"]
]
install: [
  [make "install"]
]
remove: [
  ["rm" "-R" "%{lib}%/coq/user-contrib/ExtLib"]
]
depends: [
  "ocaml"
  "coq" {>= "8.8"}
]
synopsis: "A library of Coq definitions, theorems, and tactics"
flags: light-uninstall
url {
  src: "git+https://github.com/coq-ext-lib/coq-ext-lib"
}
