opam-version: "2.0"
maintainer: "gmalecha@gmail.com"
version: "dev"
homepage: "https://github.com/coq-community/coq-ext-lib"
dev-repo: "git+https://github.com/coq-community/coq-ext-lib.git"
bug-reports: "https://github.com/coq-community/coq-ext-lib/issues"
authors: ["Gregory Malecha"]
license: "BSD-2-Clause"
build: [
  [make "-j%{jobs}%" "theories"]
]
run-test: [
  [make "-j%{jobs}%" "examples"]
]
install: [
  [make "install"]
]
depends: [
  "ocaml"
  "coq" { >= "8.9" < "8.10" | >= "8.11" }
]
synopsis: "A library of Coq definitions, theorems, and tactics"
description: """
A collection of theories and plugins that may be useful in other Coq developments."""
tags: [
  "logpath:ExtLib"
]
url {
  src: "git+https://github.com/coq-community/coq-ext-lib"
}
